[gd_scene load_steps=23 format=3 uid="uid://c387syvb460q0"]

[ext_resource type="Script" uid="uid://bgtthviyqinsi" path="res://scripts/character_scripts/demon_king.gd" id="1_cph8i"]
[ext_resource type="PackedScene" uid="uid://b7hy12yjbrbul" path="res://scenes/weapons/greatsword.tscn" id="2_cph8i"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_270vp"]
albedo_color = Color(0.795923, 0, 0.16525, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_cuef7"]
material = SubResource("StandardMaterial3D_270vp")
radius = 1.0
height = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cph8i"]
albedo_color = Color(0.0475577, 0.0475576, 0.0475576, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ccghc"]
material = SubResource("StandardMaterial3D_cph8i")
radius = 0.2
height = 0.7

[sub_resource type="CylinderMesh" id="CylinderMesh_3uid3"]
material = SubResource("StandardMaterial3D_cph8i")
top_radius = 0.0
bottom_radius = 0.2
height = 0.7

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ccghc"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_3uid3"]
material = SubResource("StandardMaterial3D_ccghc")
radius = 0.2
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jrkdu"]
albedo_color = Color(1, 0.254902, 0.0509804, 1)

[sub_resource type="SphereMesh" id="SphereMesh_bntf7"]
material = SubResource("StandardMaterial3D_jrkdu")
radius = 0.1
height = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pyc8q"]
material = SubResource("StandardMaterial3D_ccghc")
radius = 0.05
height = 0.3

[sub_resource type="CylinderMesh" id="CylinderMesh_4v2jg"]
material = SubResource("StandardMaterial3D_cph8i")
top_radius = 0.0
bottom_radius = 0.15
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ds2em"]

[sub_resource type="Animation" id="Animation_i7rtx"]
length = 0.3

[sub_resource type="Animation" id="Animation_wjqdv"]
resource_name = "slash_attack_animation"

[sub_resource type="Animation" id="Animation_fih3v"]
resource_name = "slash_attack2_animation"

[sub_resource type="Animation" id="Animation_08dug"]
resource_name = "spear_attack1_animation"
length = 0.9

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjqdv"]
_data = {
&"RESET": SubResource("Animation_i7rtx"),
&"slash_attack1_animation": SubResource("Animation_wjqdv"),
&"slash_attack2_animation": SubResource("Animation_fih3v"),
&"spear_attack1_animation": SubResource("Animation_08dug")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_08dug"]
gravity = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i7rtx"]
transparency = 1
albedo_color = Color(1, 0.85098, 0, 0.607843)
emission_enabled = true
emission = Color(0.956863, 0.796078, 0, 1)
emission_energy_multiplier = 2.5
grow_amount = 0.5

[sub_resource type="TorusMesh" id="TorusMesh_wjqdv"]
material = SubResource("StandardMaterial3D_i7rtx")
inner_radius = 0.4
outer_radius = 0.5

[node name="demon_king" type="CharacterBody3D"]
script = ExtResource("1_cph8i")
Cname = "Demon King"
lines = Array[String](["So you've arrived, little rat.", "Face me and be crushed!"])
dialogue_amount = 3

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_cuef7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.965926, -0.25, -0.0669873, 0.207701, 0.594311, 0.776952, -0.154427, -0.764392, 0.625986, -0.5, 1.7, -0.85)
mesh = SubResource("CapsuleMesh_ccghc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/MeshInstance3D"]
transform = Transform3D(0.921979, 0.167527, -0.349127, -0.38646, 0.455252, -0.802117, 0.0245646, 0.874459, 0.484475, 0.0561954, 0.307188, 0.321622)
mesh = SubResource("CylinderMesh_3uid3")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.911162, 0.406585, -0.0668742, -0.207999, 0.593953, 0.777146, 0.355696, -0.694196, 0.625757, 0.5, 1.7, -0.85)
mesh = SubResource("CapsuleMesh_ccghc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/MeshInstance3D2"]
transform = Transform3D(0.921979, 0.167527, -0.349127, -0.38646, 0.455252, -0.802117, 0.0245646, 0.874459, 0.484475, 0.0561954, 0.307188, 0.321622)
mesh = SubResource("CylinderMesh_3uid3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(0.37361, 0.896504, 0.238108, -0.0621449, -0.231928, 0.970746, 0.925502, -0.377478, -0.0309375, -0.4, 1.029, -0.8)
mesh = SubResource("SphereMesh_3uid3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/MeshInstance3D3"]
transform = Transform3D(1, 0, 0, 0, 1, -2.22045e-16, -8.88178e-15, 3.44169e-14, 1, -0.113575, -0.00546715, 0)
mesh = SubResource("SphereMesh_bntf7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D/MeshInstance3D3"]
transform = Transform3D(0.964825, 0.0961575, 0.244674, -0.26108, 0.24141, 0.934643, 0.0308059, -0.965647, 0.258024, -0.0649743, 0.0478522, -0.241747)
mesh = SubResource("CapsuleMesh_pyc8q")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(-0.280944, 0.939703, 0.19501, -0.0628122, -0.220762, 0.973303, 0.957667, 0.261195, 0.121047, 0.4, 1.029, -0.8)
mesh = SubResource("SphereMesh_3uid3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D/MeshInstance3D4"]
transform = Transform3D(1, 0, 0, 0, 1, -2.22045e-16, -8.88178e-15, 3.44169e-14, 1, -0.113575, -0.00546715, 0)
mesh = SubResource("SphereMesh_bntf7")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D/MeshInstance3D4"]
transform = Transform3D(0.964825, 0.0961575, 0.244674, -0.26108, 0.24141, 0.934643, 0.0308059, -0.965647, 0.258024, -0.0649743, 0.0478522, -0.241747)
mesh = SubResource("CapsuleMesh_pyc8q")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, -0.258819, -0.965926, 0, 0.965926, -0.258819, 0, -1.14584, 1.58344)
mesh = SubResource("CylinderMesh_4v2jg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ds2em")

[node name="dialogue_sfx" type="AudioStreamPlayer3D" parent="."]

[node name="attack_sfx" type="AudioStreamPlayer3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_max_distance = 10.01

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.165013, -0.986291, 0, 0.986291, 0.165013, 0, 0.708469, 0)
target_position = Vector3(0, -40, 0)

[node name="attack_timer" type="Timer" parent="."]

[node name="greatsword" parent="." instance=ExtResource("2_cph8i")]
transform = Transform3D(0.87001, -0.25, -0.42495, -0.0292344, 0.834234, -0.550635, 0.492167, 0.491481, 0.718483, 1.50792, 0, -0.259951)
attack_chain = 2
damage = 50

[node name="body_animation" type="AnimationPlayer" parent="."]

[node name="attack_animation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wjqdv")
}
playback_default_blend_time = 0.3
blend_times = [&"RESET", &"RESET", 0.3]

[node name="attack_particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25237, 0)
emitting = false
amount = 1
lifetime = 0.7
one_shot = true
process_material = SubResource("ParticleProcessMaterial_08dug")
draw_pass_1 = SubResource("TorusMesh_wjqdv")

[node name="attack_particle_timer" type="Timer" parent="attack_particles"]
wait_time = 0.7
one_shot = true

[connection signal="animation_finished" from="attack_animation" to="." method="_on_attack_animation_player_animation_finished"]
